Fix for incorrect cache checking. Checking in for Tomi.Leppikangas@oulu.fi b=42505,r=adamlock